# SEARCH_ENGINE

./: .env.docker.example  .gitignore  AGENTS.md  Builder.md  HOW_TO_RUN.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS.md  PRODUCTION_READY.md  README.md  SEARCH_ENGINE_CODE_DETAILS.md  SEARCH_ENGINE_OVERVIEW.md  SECURITY_HARDENING.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  .pylintrc  Dockerfile  Makefile  README.md  basedpyright-after.json  basedpyright-final.json  basedpyright-services.json  pyproject.toml  pyrightconfig.json  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 029_add_chat_conversations_and_messages.py  030_add_builder_sessions.py  031_drop_raw_experiences_and_draft_sets.py  032_add_preferred_language_to_person_profiles.py  033_add_localized_ui_cache_to_person_profiles.py  034_add_translation_cache_table.py  035_add_gin_tsvector_search_index.py  036_add_performance_indexes.py
apps/api/docs/: EXPERIENCE_CARD_FLOW.md  VAPI_CONVAI.md  VAPI_EDIT_ASSISTANT_PROMPT.md
apps/api/src/: dependencies.py  domain.py  main.py  serializers.py  utils.py
apps/api/src/core/: __init__.py  auth.py  config.py  constants.py
apps/api/src/db/: __init__.py  models.py  seed_demo_profiles.py  session.py
apps/api/src/prompts/: __init__.py  builder_conversation.py  experience_card.py  search_filters.py  search_why_matched.py
apps/api/src/providers/: __init__.py  chat.py  email.py  embedding.py  translation.py
apps/api/src/routers/: __init__.py  auth.py  builder.py  chat.py  convai.py  profile.py  search.py  speech.py
apps/api/src/schemas/: __init__.py  auth.py  bio.py  builder.py  chat.py  contact.py  credits.py  discover.py  profile.py  search.py  speech.py
apps/api/src/services/: __init__.py  auth.py  chat.py  credits.py  locale_display.py  profile.py  profile_bio.py  search.py  translation.py
apps/api/src/services/builder/: __init__.py  builder_extraction.py  builder_session.py  engine.py  roles.py
apps/api/src/services/convai/: adapter.py  session.py
apps/api/src/services/experience/: __init__.py  child_value.py  clarify.py  crud.py  embedding.py  errors.py  extraction.py  field_extractors.py  fill_missing.py  form_merge.py  persistence.py  pipeline.py  rewrite.py  search_document.py
apps/api/src/services/search/: __init__.py  _runtime_values.py  candidates.py  filter_validator.py  results.py  (+7 more)
apps/api/tests/: conftest.py  test_health.py
(+192 files in other folders)
